[gd_scene load_steps=10 format=3 uid="uid://bs3imhhmpsfrb"]

[ext_resource type="Script" path="res://main.gd" id="1_rifxm"]
[ext_resource type="PackedScene" uid="uid://wappy8b1bsmt" path="res://player.tscn" id="1_s3j68"]
[ext_resource type="Script" path="res://game.gd" id="2_cfjnl"]
[ext_resource type="PackedScene" uid="uid://daqmm0awmw3au" path="res://hurt_pipe.tscn" id="2_kpmov"]
[ext_resource type="Texture2D" uid="uid://dalo5rbpl5hvs" path="res://6266232149901312.png" id="4_njs3a"]
[ext_resource type="PackedScene" uid="uid://dps5sihs3gwjk" path="res://main_menu.tscn" id="5_ehj63"]
[ext_resource type="Script" path="res://gui.gd" id="6_j76tp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucfxm"]
size = Vector2(733.5, 47.5)

[sub_resource type="Theme" id="Theme_hwdmm"]
default_font_size = 50

[node name="main" type="Node2D"]
script = ExtResource("1_rifxm")

[node name="background" type="ColorRect" parent="."]
offset_left = -13.0
offset_top = -15.0
offset_right = 1199.0
offset_bottom = 689.0
color = Color(0.282353, 0.615686, 0.890196, 1)

[node name="game" type="Node2D" parent="."]
visible = false
script = ExtResource("2_cfjnl")

[node name="HurtPipes" parent="game" instance=ExtResource("2_kpmov")]

[node name="Player" parent="game" instance=ExtResource("1_s3j68")]
position = Vector2(235, 325)

[node name="ground" type="StaticBody2D" parent="game" groups=["ground"]]
position = Vector2(0, 5)

[node name="Sprite2D" type="Sprite2D" parent="game/ground"]
position = Vector2(1031, 622)
scale = Vector2(0.121104, 0.121104)
texture = ExtResource("4_njs3a")

[node name="Sprite2D2" type="Sprite2D" parent="game/ground"]
position = Vector2(787, 622)
scale = Vector2(0.121104, 0.121104)
texture = ExtResource("4_njs3a")

[node name="Sprite2D3" type="Sprite2D" parent="game/ground"]
position = Vector2(545, 622)
scale = Vector2(0.121104, 0.121104)
texture = ExtResource("4_njs3a")

[node name="Sprite2D4" type="Sprite2D" parent="game/ground"]
position = Vector2(301, 622)
scale = Vector2(0.121104, 0.121104)
texture = ExtResource("4_njs3a")

[node name="Sprite2D5" type="Sprite2D" parent="game/ground"]
position = Vector2(57, 622)
scale = Vector2(0.121104, 0.121104)
texture = ExtResource("4_njs3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="game/ground"]
position = Vector2(367.25, 622.25)
shape = SubResource("RectangleShape2D_ucfxm")

[node name="gui" type="Control" parent="game"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_right = 1152.0
offset_bottom = 645.0
script = ExtResource("6_j76tp")

[node name="score" type="Label" parent="game/gui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="game_over" type="Control" parent="game/gui"]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="game/gui/game_over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -318.5
offset_right = 222.0
offset_bottom = 318.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="score" type="Label" parent="game/gui/game_over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.5
offset_top = -234.5
offset_right = 123.5
offset_bottom = -176.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Your score: 0"

[node name="respawn" type="Button" parent="game/gui/game_over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = 92.0
offset_right = 106.5
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hwdmm")
text = "Restart"

[node name="main_menu" parent="." instance=ExtResource("5_ehj63")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 2.0
offset_right = 1149.0
offset_bottom = 652.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="game/gui/game_over/respawn" to="game" method="_on_respawn_pressed"]
[connection signal="pressed" from="game/gui/game_over/respawn" to="game/gui" method="_on_respawn_pressed"]
